import {
  createServerElement,
  defineElement,
  property,
  type ElementDeclaration,
} from 'maverick.js/element';

it('should render attributes', () => {
  const { host } = setupTestElement({
    setup: ({ host }) => {
      host.setAttribute('foo', '1');
      host.setAttribute('bar', '2');
      host.setAttribute('baz', '3');
      host.removeAttribute('baz');
      return () => 'Test';
    },
  });

  host.$setup();
  host.$render();

  expect(host.attributes.tokens).toMatchSnapshot();
});

it('should render class list', () => {
  const { host } = setupTestElement({
    setup: ({ host }) => {
      host.classList.add('foo');
      host.classList.add('baz', 'bam', 'doh');
      host.classList.toggle('boo');
      host.classList.toggle('bax');
      host.classList.toggle('bax');
      host.classList.toggle('hux');
      host.classList.toggle('hux');
      host.classList.remove('bam');
      return () => 'Test';
    },
  });

  host.$setup();
  host.$render();

  expect(host.attributes.tokens).toMatchSnapshot();
});

it('should render styles', () => {
  const { host } = setupTestElement({
    setup: ({ host }) => {
      host.style.setProperty('foo', '1');
      host.style.setProperty('bar', '2');
      host.style.setProperty('baz', '3');
      host.style.removeProperty('baz');
      host.style.setProperty('display', 'content');
      host.style.setProperty('--hux', 'none');
      return () => 'Test';
    },
  });

  host.$setup();
  host.$render();

  expect(host.attributes.tokens).toMatchSnapshot();
});

it('should reflect props', () => {
  const { host } = setupTestElement({
    props: {
      foo: property(10, { reflect: true }),
      bar: property(20, { reflect: true }),
    },
  });

  host.$setup();
  host.$render();

  expect(host.attributes.tokens).toMatchSnapshot();
});

it('should noop dom events api', () => {
  const { host } = setupTestElement({
    setup({ host }) {
      host.addEventListener('click', () => {});
      host.removeEventListener('click', () => {});
      host.dispatchEvent(new MouseEvent('click'));
      return () => null;
    },
  });

  expect(() => {
    host.$setup();
  }).not.toThrow();
});

function setupTestElement(definitionInit?: Partial<ElementDeclaration>) {
  const definition = defineElement({
    tagName: `mk-foo`,
    setup: ({ props }) => {
      const members = { $render: () => 'Test' };

      for (const prop of Object.keys(props)) {
        Object.defineProperty(members, prop, {
          enumerable: true,
          get() {
            return props[prop];
          },
        });
      }

      return members;
    },
    ...definitionInit,
  });

  return {
    definition,
    host: new (createServerElement(definition))(),
  };
}
